# windprofiles

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: developing.md  external_apis.md
tests/: conftest.py
tests/unit/: test_elevation.py  test_geo.py
windprofiles/: __init__.py  __main__.py
windprofiles/data/: elevation.py  gmaps.py  meteostat.py  request.py  timezone.py
windprofiles/gis/: polygons.py  raster.py
windprofiles/lib/: atmos.py  geo.py  polar.py  stats.py
windprofiles/plotting/: __init__.py  colors.py
windprofiles/process/: __init__.py  format.py  qc.py  sonic.py  units.py
windprofiles/processing/: __init__.py  compute.py  mproc.py  profiles.py  qc.py  sampling.py  sonic.py  units.py
windprofiles/quantities/: core.py  dimensions.py  variables.py
windprofiles/structures/: base.py  location.py  metdata.py  timeseries.py  tower.py
windprofiles/user/: args.py  config.py  logs.py
windprofiles/utilities/: classify.py  collections.py  location.py  other.py  validate.py
